--- a/style/style.css
+++ b/style/style.css
@@ -1,1 +1,103 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  height: 100 auto;
+  background: #0F0D0E;
+  padding: 25px 96px;
+  position: relative;
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+header nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 62.75px;
+}
+
+header nav p {
+  font-size: 16px;
+  color: gray;
+}
+
+header nav p:hover {
+  color: #fff;
+}
+
+header .img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 40px;
+}
+
+main {
+  margin-top: 79.72px;
+}
+
+main h1 {
+  font-size: 100px;
+  color: #fff;
+}
+
+main h1 span {
+  width: 436.81px;
+  height: 128.86px;
+  margin-left: 50px;
+  background-color: #FF0000;
+  -webkit-clip-path: polygon(4% 0%, 100% 0%, 95% 100%, 0% 100%);
+          clip-path: polygon(4% 0%, 100% 0%, 95% 100%, 0% 100%);
+}
+
+main p {
+  margin-top: 24px;
+  text-align: center;
+  font-size: 16px;
+  color: #C2C2C2;
+}
+
+main p:hover {
+  color: #fff;
+}
+
+main .car {
+  position: absolute;
+  margin-left: 100px;
+}
+
+main .text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 35.86px;
+  margin-top: 120px;
+  margin-left: 1100px;
+}
+/*# sourceMappingURL=style.css.map */
