--- a/style/mixin/_mixin.scss
+++ b/style/mixin/_mixin.scss
@@ -11,3 +11,9 @@ body {
     padding: 25px 96px;
     position: relative;
 }
+
+section {
+    width: 100%;
+    height: 100 auto;
+    background: $orqafon;
+}
